--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@radix-ui/react-switch": "^1.2.6",
     "@tailwindcss/postcss": "^4.1.13",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
@@ -32,6 +37,7 @@
     "globals": "^16.4.0",
     "jiti": "^2.6.0",
     "prettier": "^3.6.2",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "typescript-eslint": "^8.44.1"
   }
